fixed rightside whitespace

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,14 @@
 html {
   font-size: 100%;
 }
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 body {
   font-size: 15px;
   font-size: 0.9375rem;
